--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 						</div>
 						<div class="image">
 						  <!-- <img src="images/banner.jpg" alt="" /> -->
- 							<img src="images/usa.png" alt="" />
+ 							<img src="images/egypt.png" alt="" />
                         <!--  <img src="images/eamon.jpg" alt="" /> -->
 						</div>
 					</section>
 
 				<!-- Footer -->
-	
+
 
 <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 		<!-- Scripts -->
