--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
 						<div class="content">
 							<h1>philosophic AI</h1>
 
-                            <p class="major">question everything</a></p>
+                            <p class="major">questioning everything</a></p>
 
                             <p>We empower governments, research institutions, and corporations to ask
 														and answer transformational questions of their data. We work directly with
-													organizations to augment intelligence in the service of sustained innovation, policy, risk assessment,
+													organizations to augment intelligence, design experiments and intelligent surveys to realize
+													sustained innovation, effective policy, risk assessment,
 												and discovery.</p>
 
 
@@ -45,7 +46,7 @@
 						</div>
 						<div class="image">
 						  <!-- <img src="images/banner.jpg" alt="" /> -->
- 							<img src="images/egypt.png" alt="" />
+ 							<img src="images/usa.png" alt="" />
                         <!--  <img src="images/eamon.jpg" alt="" /> -->
 						</div>
 					</section>
