--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 													sustained innovation, effective policy, risk assessment,
 												and discovery.</p>
 
-
+							<ul class="actions stacked">
+									<li><a href="mailto:info@philosophicai.com" class="button big smooth-scroll-middle">Info</a>
+																<!--<a href="projects.html" class="button big smooth-scroll-middle">Projects</a>-->
+									<a href="mailto:clients@philosophicai.com" class="button big smooth-scroll-middle">Clients</a>
+									</li>
+							</ul>
 
 						</div>
 						<div class="image">
