--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 												and discovery.</p>
 
 							<ul class="actions stacked">
-									<li><a href="mailto:info@philosophicai.com" class="button big smooth-scroll-middle">Info</a>
-																	
+									<li><a href="mailto:info@philosophicai.com" class="button big smooth-scroll-middle">Inquiries</a>
+
 									</li>
 							</ul>
 
